added responsible footer section

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ modern sophistication, featuring weathered wood, sleek metal accents.</p>
           <section  class=" px-7 py-24 mb-32 space-y-7" style="background-image: url(/assets/bg.jpg);">
                      <!-- button -->
            <div class="text-center">
-               <button class=""> <a class="btn bg-[#c1f684] shadow  rounded-full text-xl font-semibold  "> <i class="fa-solid fa-arrow-right-long font-semibold  "></i>Let’s Connect</a></button>
+               <button class=""> <a class="btn bg-[#c1f684] shadow  rounded-full border-none text-xl font-semibold  "> <i class="fa-solid fa-arrow-right-long font-semibold  "></i>Let’s Connect</a></button>
              </div>
              <!-- description -->
               <h2 class="text-4xl text-center font-bold">Let’s Discuss Next Project</h2>
@@ -315,13 +315,33 @@ modern sophistication, featuring weathered wood, sleek metal accents.</p>
               placeholder="Write your message here"
               class="textarea textarea-bordered textarea-lg rounded-3xl h-[150px] w-full"></textarea>
                </div>
-        <button> <a class="btn bg-[#c1f684] rounded-full w-full text-xl font-semibold  ">Send Mail <i class="fa-solid fa-arrow-right-long font-semibold -rotate-45 bg-black rounded-full shadow p-2 text-white"></i></a></button>
+        <button> <a class="btn bg-[#c1f684] rounded-full w-full text-xl font-semibold border-none  ">Send Mail <i class="fa-solid fa-arrow-right-long font-semibold -rotate-45 bg-black rounded-full shadow p-2 text-white"></i></a></button>
            </div>
           </section>
     </main>
-    <footer>
-   
-    </footer>
+<footer class="footer footer-center bg-[#1C1C1C] text-base-content rounded p-10">
+  <!-- logo -->
+  <div class="flex gap-2 ">
+    <div class="">
+        <button class=" bg-btn-clr btn-circle"><i class="fa-solid fa-arrow-right-long font-semibold  -rotate-45"></i></button>
+    </div>
+ <a class=" text-3xl font-bold text-white">Rinterio</a>
+  </div>
+<!-- text -->
+<p class="text-[#737373] text-center font-medium">The barn house captivates with its blend of rustic  charm <br> and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+<!-- nav section -->
+  <nav class="grid grid-cols-1 gap-5 lg:grid-flow-col lg:gap-20 text-[#E9E9E9]">
+    <a class="link link-hover">Home</a>
+    <a class="link link-hover">Services</a>
+    <a class="link link-hover">Portfolio</a>
+    <a class="link link-hover">Blogs</a>
+    <a class="link link-hover">Contact Us</a>
+  </nav>
+  
+          <button> <a class="btn bg-[#c1f684] rounded-full text-xl font-semibold border-none  ">Book Consult <i class="fa-solid fa-arrow-right-long font-semibold -rotate-45 bg-black rounded-full shadow p-2 text-white"></i></a></button>
+
+  
+</footer>
 
 </body>
 </html>
